fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -325,4 +325,41 @@ input:checked + .toggle .star--5 {
 input:checked + .toggle .star--6 {
   transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
- 
+
+
+
+.e-grid {
+  border-color: none;
+  border-radius: 20px;
+}
+
+
+
+.e-grid .e-pager {
+  border-radius: 0 0 20px 20px;
+}
+
+
+#OrdersCop .e-droppable {
+  border-radius: 20px 20px 0 0;
+}
+
+.e-grid .e-toolbar {
+  border-radius: 20px 20px 0 0;
+}
+
+.e-toolbar .e-toolbar-items {
+  border-radius: 20px 20px 0 0 !important;
+}
+
+.e-control {
+  border-radius: 20px;
+}
+
+.e-richtexteditor.e-rte-tb-expand .e-rte-content, .e-richtexteditor.e-rte-tb-expand .e-source-content {
+  border-radius: 0 0 20px 20px;
+}
+
+#preview {
+  border-radius: 20px;
+}
